examples/test/testpolicy5444.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5444
  namespace: namespace383
spec:
  podSelector:
    matchLabels:
      key44: value28
      key13: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value0
          key14: value11
      podSelector:
        matchLabels:
          key13: value15
          key10: value25
          key3: value5
